[metadata]
name = pre_commit_hooks
version = 4.6.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KgaevskiT/pre-commit-hooks
author = Thomas Kgaevski
author_email = thomas.kgaevski@karos.fr
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-import-datetime = pre_commit_hooks.check_import_datetime:main
